[package]
name = "llog"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
rfd = "0.15.3"
zip = "3.0.0"
walkdir = "2.5.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
thiserror = "2.0.12"
egui_inbox = "0.8.0"
chrono = "0.4.41"
infer = "0.19.0"
sevenz-rust2 = "0.13.2"
xz2 = "0.1.7"
bzip2 = "0.5.2"
flate2 = "1.1.1"
tar = "0.4.44"
anyhow = "1.0.98"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 # Can improve optimization but increases compile time
